--- a/index.html
+++ b/index.html
@@ -239,5 +239,8 @@
     }, 3000);
   })();
   </script>
+  <!-- load reclaim plugin (place after base scripts) -->
+<script src="reclaim_rent_v1.js"></script>
 </body>
 </html>
+
