--- a/index.html
+++ b/index.html
@@ -241,6 +241,8 @@
   </script>
   <!-- load reclaim plugin (place after base scripts) -->
 <script src="reclaim_rent_v1.js"></script>
+<script src="walletSessionManager.js"></script>
 </body>
 </html>
+
 
